Disable SequencedCollectionGetLast rule
Signed-off-by: Jonah Snider <jonah@jonahsnider.com>